[gd_scene load_steps=45 format=2]

[ext_resource path="res://img/boton_back.png" type="Texture" id=1]
[ext_resource path="res://script/character2jugadores_2.gd" type="Script" id=2]
[ext_resource path="res://img/none.png" type="Texture" id=3]
[ext_resource path="res://img/character/p1_11.png" type="Texture" id=4]
[ext_resource path="res://img/character/p1_15.png" type="Texture" id=5]
[ext_resource path="res://img/character/p1_16.png" type="Texture" id=6]
[ext_resource path="res://img/character/p1_17.png" type="Texture" id=7]
[ext_resource path="res://img/character/p1_19.png" type="Texture" id=8]
[ext_resource path="res://img/character/p1_10.png" type="Texture" id=9]
[ext_resource path="res://img/character/p1_12.png" type="Texture" id=10]
[ext_resource path="res://img/character/p1_9.png" type="Texture" id=11]
[ext_resource path="res://img/character/p1_3.png" type="Texture" id=12]
[ext_resource path="res://img/character/p1_2.png" type="Texture" id=13]
[ext_resource path="res://img/character/p1_4.png" type="Texture" id=14]
[ext_resource path="res://img/character/p1_5.png" type="Texture" id=15]
[ext_resource path="res://img/character/p1_18.png" type="Texture" id=16]
[ext_resource path="res://img/character/p1_6.png" type="Texture" id=17]
[ext_resource path="res://img/character/p1_7.png" type="Texture" id=18]
[ext_resource path="res://img/character/p1_8.png" type="Texture" id=19]
[ext_resource path="res://img/character/p1_13.png" type="Texture" id=20]
[ext_resource path="res://img/character/p1_14.png" type="Texture" id=21]
[ext_resource path="res://img/character/p1_1.png" type="Texture" id=22]
[ext_resource path="res://scenes/back.tscn" type="PackedScene" id=23]
[ext_resource path="res://img/character/p2_1.png" type="Texture" id=24]
[ext_resource path="res://img/character/p2_12.png" type="Texture" id=25]
[ext_resource path="res://img/character/p2_3.png" type="Texture" id=26]
[ext_resource path="res://img/character/p2_5.png" type="Texture" id=27]
[ext_resource path="res://img/character/p2_4.png" type="Texture" id=28]
[ext_resource path="res://img/character/p2_17.png" type="Texture" id=29]
[ext_resource path="res://img/character/p2_18.png" type="Texture" id=30]
[ext_resource path="res://img/character/p2_19.png" type="Texture" id=31]
[ext_resource path="res://img/character/p2_10.png" type="Texture" id=32]
[ext_resource path="res://img/character/p2_11.png" type="Texture" id=33]
[ext_resource path="res://img/character/p2_13.png" type="Texture" id=34]
[ext_resource path="res://img/character/p2_14.png" type="Texture" id=35]
[ext_resource path="res://img/character/p2_15.png" type="Texture" id=36]
[ext_resource path="res://img/character/p2_7.png" type="Texture" id=37]
[ext_resource path="res://img/character/p2_6.png" type="Texture" id=38]
[ext_resource path="res://img/character/p2_2.png" type="Texture" id=39]
[ext_resource path="res://img/character/p2_16.png" type="Texture" id=40]
[ext_resource path="res://img/character/p2_8.png" type="Texture" id=41]
[ext_resource path="res://img/character/p2_9.png" type="Texture" id=42]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 59.7955, 58.1436 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 16 ), ExtResource( 8 ) ],
"loop": true,
"name": "jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 39 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 27 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 40 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "jump2",
"speed": 20.0
}, {
"frames": [  ],
"loop": true,
"name": "engaño",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "default2",
"speed": 5.0
} ]

[node name="personaje_2jugadores" type="Node2D"]
position = Vector2( 24, 0 )

[node name="character2jugadores_1" type="KinematicBody2D" parent="."]
position = Vector2( 11, 34 )
script = ExtResource( 2 )

[node name="inteto" type="Label" parent="character2jugadores_1"]
margin_left = -163.0
margin_top = -322.0
margin_right = -112.0
margin_bottom = -308.0
text = "INTENTO: "

[node name="n_intento" type="Label" parent="character2jugadores_1"]
margin_left = -91.0
margin_top = -322.0
margin_right = -26.0
margin_bottom = -308.0

[node name="Camera2D" type="Camera2D" parent="character2jugadores_1"]
position = Vector2( -19, 6 )
scale = Vector2( 1.6, 1.56 )
current = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="character2jugadores_1"]
position = Vector2( 5, -6 )
scale = Vector2( 0.668946, 0.619157 )
shape = SubResource( 1 )

[node name="jump" type="TouchScreenButton" parent="character2jugadores_1" groups=[
"player",
]]
visible = false
modulate = Color( 0.423529, 0.223529, 0.223529, 1 )
self_modulate = Color( 0.337255, 0.180392, 0.180392, 1 )
position = Vector2( -675, -330 )
scale = Vector2( 3.48438, 2 )
normal = ExtResource( 3 )

[node name="Node2D" parent="character2jugadores_1" instance=ExtResource( 23 )]
position = Vector2( -131, 246 )
scale = Vector2( 0.400001, 0.6 )

[node name="jump_2" type="TouchScreenButton" parent="character2jugadores_1"]
position = Vector2( 289.427, 115 )
rotation = 1.5708
scale = Vector2( 1.34146, 2.26785 )
normal = ExtResource( 1 )

[node name="animacion" type="AnimatedSprite" parent="character2jugadores_1"]
scale = Vector2( 0.509783, 0.51259 )
frames = SubResource( 2 )
animation = "engaño"
speed_scale = 2.5
playing = true
[connection signal="pressed" from="character2jugadores_1/jump" to="character2jugadores_1" method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="character2jugadores_1/jump" to="character2jugadores_1" method="_on_jump_pressed"]
[connection signal="released" from="character2jugadores_1/jump" to="character2jugadores_1" method="_on_jump_released"]
[connection signal="pressed" from="character2jugadores_1/jump_2" to="character2jugadores_1" method="_on_jump_2_pressed"]
[connection signal="released" from="character2jugadores_1/jump_2" to="character2jugadores_1" method="_on_jump_2_released"]
